# random-paper-implementations

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pre-commit.yml
helper_methods/: signal_processing_methods.py
implementations/learning_using_spectra/: model_investigation.py  model_investigation_signal.py  parametric_matrix_models.py  spectra_learning_bivariate_approximation.py  spectra_learning_introduction.py  spectra_univariate_functions.py
implementations/robust_optimized_weight_spectrum/: logstic_regression_investigation.py  paper_investigation.py  paper_investigations.py  paper_utils.py
implementations/robust_optimized_weight_spectrum/presentation/: beamerinnerthemeSimplePlusAIC.sty  beamerthemeSimplePlusAIC.sty  main.aux  main.nav  main.out  main.tex  main.toc
implementations/robust_optimized_weight_spectrum/presentation/figures/: linear_regression.py  logistic_regression.py
robust-optimized-weight-spectrum/: README.md  paper_investigations.py  paper_utils.py
