[project]
name = "random-paper-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "detect-secrets>=1.5.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]
